# FFmpegEntity

./: .gitignore  CMakeLists.txt  Char033.h  Log.h  README.md  main.cpp
FFmpegEntity/: CMakeLists.txt  QtSupport.cpp
FFmpegEntity/Basic/: Basic.cpp  Basic.h  Color.cpp  Color.h  Formats.cpp  Formats.h  Frame.cpp  Frame.h  Packet.cpp  Packet.h
FFmpegEntity/Codec/: AudioEncoder.cpp  AudioEncoder.h  Codec.cpp  Codec.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  VideoEncoder.cpp  VideoEncoder.h
FFmpegEntity/Format/: AVFormat.cpp  AVFormat.h  AVInput.cpp  AVInput.h  AVOutput.cpp  AVOutput.h  Stream.cpp  Stream.h
tools/: flatter.cpp  generateTest.cpp  stick.cpp  testMeta.cpp
